--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ color: blue;
 
 @media only screen and (max-width: 600px) {
     .menu {
-        display: none;
+        display: none !important; 
         position: absolute;
         top: 100px;
         left: 0;
