--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ padding: 10px;
 }
 .navbar ul li a{
 text-decoration: none;
-color: blue;
+
 
 }
 .banner h1{
@@ -159,7 +159,7 @@ color: blue;
 
 @media only screen and (max-width: 600px) {
     .menu {
-        display: none !important; 
+        display:none; 
         position: absolute;
         top: 100px;
         left: 0;
@@ -167,6 +167,9 @@ color: blue;
         background-color: #fff; 
         z-index: 1;
         overflow-x: hidden; 
+    }
+    .menu li{
+        display:none;
     }
 
     .menu.show-menu {
@@ -179,7 +182,7 @@ color: blue;
     }
 
     .hamburger {
-        width: 20px; 
+        width: 25px; 
         height: 4px;
         background-color: #333;
         margin: 6px 0;
