--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,7 @@ text-decoration: none;
         height: 4px;
         background-color: #333;
         margin: 6px 0;
+        margin-right: 20px;
     }
 
     .menu.show-menu li {
